# zcore_study

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README-arch.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/scripts/: add-doc-index.sh  make-qemu.sh
.github/workflows/: build.yml  docs.yml  test.yml
config/: machine-features.toml
docs/: README-C910.md  README-D1.md  README-fu740.md  README-visionfive.md  README_EN.md  for-developers.md  porting-rv64.md
drivers/: Cargo.toml
drivers/src/: lib.rs  prelude.rs
drivers/src/builder/: devicetree.rs  mod.rs
drivers/src/bus/: mod.rs  pci.rs
drivers/src/display/: mod.rs  uefi.rs
drivers/src/input/: input_event_codes.rs  mod.rs  mouse.rs
drivers/src/io/: mmio.rs  mod.rs  pmio.rs
drivers/src/irq/: gic_400.rs  mod.rs  riscv_intc.rs  riscv_plic.rs
drivers/src/mock/: display.rs  input.rs  mod.rs  uart.rs
drivers/src/net/: e1000.rs  loopback.rs  mod.rs  rtlx.rs
drivers/src/nvme/: interface.rs  mod.rs  nvme_queue.rs
drivers/src/scheme/: block.rs  display.rs  event.rs  input.rs  irq.rs  mod.rs  net.rs  uart.rs
drivers/src/uart/: buffered.rs  mod.rs  uart_16550.rs  uart_allwinner.rs  uart_pl011.rs  uart_u740.rs
drivers/src/utils/: devicetree.rs  event_listener.rs  graphic_console.rs  id_allocator.rs  irq_manager.rs  mod.rs
drivers/src/virtio/: blk.rs  console.rs  gpu.rs  input.rs  mod.rs
kernel-hal/: Cargo.toml
kernel-hal/src/: config.rs  drivers.rs  hal_fn.rs  kernel_handler.rs  lib.rs  macros.rs
kernel-hal/src/bare/: boot.rs  mem.rs  mod.rs  net.rs  thread.rs  timer.rs
kernel-hal/src/common/: addr.rs  console.rs  context.rs  defs.rs  future.rs  (+7 more)
linux-object/: Cargo.toml
linux-object/src/: error.rs  lib.rs  process.rs  thread.rs  time.rs
linux-syscall/: Cargo.toml  build.rs
linux-syscall/src/: aarch64_syscall.h.in  ipc.rs  lib.rs  misc.rs  net.rs  riscv64_syscall.h.in  signal.rs  syscall.h.in  task.rs  time.rs  vm.rs
linux-syscall/test/: testpipe1.c  testpipe2.c  testpoll.c  testrandom.c  testselect.c  testsem1.c  testsem2.c  testshm1.c  testshm2.c  testtime.c
loader/: Cargo.toml
loader/examples/: linux-libos.rs  zircon-libos.rs
loader/src/: lib.rs  linux.rs  zircon.rs
loader/tests/: linux.rs  zircon.rs
scripts/: gen-prebuilt.sh  script.sh  zcore.patch  zircon-libos.patch
tools/docker/: README.md  build_docker_image.sh  start_container.sh  zcore-ubuntu.dockerfile
xtask/: CHANGELOG.md  Cargo.toml  build.rs
xtask/src/: arch.rs  build.rs  commands.rs  dump.rs  errors.rs  main.rs
z-config/: Cargo.toml
z-config/src/: lib.rs
zCore/: .gdbinit_riscv64  .gdbinit_x86_64  Cargo.toml  Makefile  aarch64.json  build.rs  rboot.conf  rboot.conf.default  riscv64.json  x86_64.json
zCore/src/: Makefile  fs.rs  handler.rs  lang.rs  logging.rs  main.rs  memory.rs  memory_x86_64.rs  utils.rs
zCore_aarch64_firmware/rayboot-2.0.0/: Cargo.toml  README.md  build.rs  build_script.py  x86_64-bootloader.json
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/irsa/: .gitignore  Cargo.toml
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/irsa/src/: lib.rs  mask.rs  oaep.rs  primes.rs
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/isha1/src/: lib.rs
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/isha256/: .gitignore
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/kernel-signer/: .gitignore  Cargo.toml
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/kernel-signer/src/: main.rs
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/prime-math/: Cargo.toml
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/prime-math/src/: lib.rs
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/uefi-test-runner/: .gitignore  Cargo.toml
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/uefi-test-runner/src/: lib.rs
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/uefi-test-runner/src/proto/: rng.rs
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/uefi-test-runner/src/proto/media/: known_disk.rs
zCore_aarch64_firmware/rayboot-2.0.0/dependencies/uefi-test-runner/src/runtime/: vars.rs
zCore_aarch64_firmware/rayboot-2.0.0/src/: boot_info.rs  lib.rs
zCore_aarch64_firmware/rayboot-2.0.0/src/arch/: mod.rs
zCore_aarch64_firmware/rayboot-2.0.0/src/arch/aarch64/: config.rs  entry.rs  mod.rs  page_table.rs  serial_logger.rs
zCore_aarch64_firmware/rayboot-2.0.0/src/arch/aarch64/bsp/: mod.rs  pl011_uart.rs  serial.rs
zCore_aarch64_firmware/rayboot-2.0.0/src/arch/x86_64/: load_kernel.rs  logger.rs  mod.rs
zCore_aarch64_firmware/rayboot-2.0.0/src/arch/x86_64/bios/: memory_descriptor.rs
zCore_aarch64_firmware/rayboot-2.0.0/src/arch/x86_64/uefi/: memory_descriptor.rs
zircon-object/: Cargo.toml
zircon-object/src/: debuglog.rs  error.rs  lib.rs
zircon-object/src/dev/: bti.rs  iommu.rs  mod.rs  pmt.rs  resource.rs
zircon-object/src/dev/interrupt/: event_interrupt.rs  mod.rs  pci_interrupt.rs  virtual_interrupt.rs
zircon-object/src/dev/pci/: bus.rs  caps.rs  config.rs  mod.rs  nodes.rs  pci_init_args.rs  pmio.rs
zircon-object/src/hypervisor/: guest.rs  mod.rs  vcpu.rs
zircon-object/src/ipc/: channel.rs  fifo.rs  mod.rs  socket.rs
zircon-object/src/object/: handle.rs  mod.rs  rights.rs  signal.rs
zircon-object/src/signal/: event.rs  eventpair.rs  futex.rs  mod.rs  port.rs  port_packet.rs  timer.rs
zircon-object/src/task/: exception.rs  job.rs  job_policy.rs  mod.rs  process.rs  suspend_token.rs  thread.rs
zircon-object/src/task/thread/: thread_state.rs
zircon-object/src/util/: block_range.rs  elf_loader.rs  kcounter.rs  mod.rs
zircon-object/src/vm/: mod.rs  stream.rs  vmar.rs
zircon-object/src/vm/vmo/: mod.rs  paged.rs  physical.rs  slice.rs
zircon-syscall/: Cargo.toml  build.rs
zircon-syscall/src/: channel.rs  cprng.rs  ddk.rs  debug.rs  debuglog.rs  exception.rs  fifo.rs  futex.rs  handle.rs  hypervisor.rs  lib.rs  object.rs  pci.rs  port.rs  resource.rs  signal.rs  socket.rs  stream.rs  system.rs  task.rs  time.rs  vmar.rs  vmo.rs  zx-syscall-numbers.h
zircon-user/: Cargo.toml  Makefile  rust-toolchain.toml
zircon-user/.cargo/: config
(+120 files in other folders)
