[package]
name = "zircon-object"
version = "0.1.0"
authors = [
    "Runji Wang <wangrunji0408@163.com>",
    "Qinglin Pan <panqinglin00@163.com>",
]
edition = "2018"
description = "Zircon kernel objects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
aspace-separate = []
elf = ["xmas-elf"]
#hypervisor = ["rvm"]

libos = [
    "kernel-hal/libos",
]

[dependencies] #生产环境依赖的库（项目在最终发行时实际需要的依赖）
bitflags = "1.3"
log = "0.4"
hashbrown = "0.9"
downcast-rs = { version = "1.2", default-features = false }
kernel-hal = { path = "../kernel-hal", default-features = false }
numeric-enum-macro = "0.2"
#这个是用来做“异步运行时”的库，因为在“生产环境”下是no-std的，所以不能用async-std，于是用了兼容no-std的futures库
futures = { version = "0.3", default-features = false, features = [    
    "alloc",
    "async-await",
] }
xmas-elf = { version = "0.7", optional = true }
region-alloc = { git = "https://github.com/rzswh/region-allocator", rev = "122c7a71" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
cfg-if = "1.0"
#rvm = { git = "https://github.com/rcore-os/RVM", rev = "382fc60", optional = true }
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "8486b8" }

[dev-dependencies] #开发环境依赖的库（编写运行测试，构建工具时候用的库）
async-std = { version = "1.10", features = ["attributes", "unstable"] }
